# openwit

./: .gitignore  Cargo.toml  DOCKER.md  Dockerfile  README.md  docker-compose.yaml
src/: main.rs
src/openwit-actors/: Cargo.toml
src/openwit-actors/src/: clusteractor.rs  decision.rs  flusher.rs  heartbeat.rs  indexer.rs  ingestion.rs  ingestor.rs  janitor.rs  kafka.rs.disabled  kafka_messages.rs  lib.rs  memschema.rs  memtable.rs  messages.rs  monitor.rs  pipeline.rs  scale.rs  simple_ingest.rs  storage.rs
src/openwit-cli/: Cargo.toml
src/openwit-cli/src/: auto_config.rs  config_loader.rs  control_plane_discovery.rs  control_plane_only_startup.rs  distributed_auto_config.rs  ingestion_type.rs  lib.rs  main.rs  node_startup.rs  port_utils.rs
src/openwit-common/: Cargo.toml
src/openwit-common/src/: lib.rs  messages.rs  observability.rs  system_metrics.rs
src/openwit-config/: Cargo.toml
src/openwit-config/src/: compatibility.rs  lib.rs  loader.rs  models.rs  unified_config.rs  unified_config_processing.rs  unified_loader.rs
src/openwit-config/src/unified/: actors.rs  alerting.rs  config_validator.rs  control_plane.rs  deployment.rs  development.rs  health_thresholds.rs  high_performance.rs  indexing.rs  ingestion.rs  janitor.rs  mandatory_nodes.rs  memory.rs  metastore.rs  mod.rs  monitoring.rs  networking.rs  performance.rs  performance_testing.rs  processing.rs  search.rs  security.rs  service_ports.rs  storage.rs  storage_node.rs  validation.rs
src/openwit-control-plane/: Cargo.toml  build.rs
src/openwit-control-plane/src/: client.rs  grpc_server.rs  lib.rs  mandatory_node_checker.rs  node_manager.rs  surveillance.rs  types.rs
src/openwit-grpc/: Cargo.toml
src/openwit-grpc/src/: flush_pool.rs  format_helpers.rs  grpc_server.rs  high_performance_config.rs  lib.rs  main.rs  otlp_ingest_connector.rs  otlp_services.rs
src/openwit-http/: Cargo.toml
src/openwit-http/src/: control_plane_integration.rs  error.rs  ingestion_client.rs  lib.rs  metrics.rs  otlp_handlers.rs  server.rs
src/openwit-indexer/: Cargo.toml  build.rs
src/openwit-indexer/benches/: index_benchmarks.rs
src/openwit-indexer/proto/: index_service.proto
src/openwit-indexer/src/: arrow_flight_receiver.rs  artifacts.rs  bloom.rs  bloom_wrapper.rs  cache.rs  cluster.rs  columnar.rs  combine.rs  compaction.rs  config.rs  db.rs  events.rs  flight.rs  fulltext.rs  grpc_service.rs  http.rs  indexer_main.rs  init.rs  inverted.rs  lib.rs  memory_test.rs  metadata.rs  metrics.rs  parquet.rs  query.rs  recovery.rs  resource_monitor.rs  stats.rs  storage.rs  tantivy_indexer.rs  timeseries.rs  wal.rs
src/openwit-inter-node/: Cargo.toml  build.rs
src/openwit-inter-node/proto/: inter_node.proto
src/openwit-inter-node/src/: address_cache.rs  arrow_flight_service.rs  arrow_flight_transfer.rs  command_executor.rs  data_transfer_actor.rs  lib.rs  node_client.rs  node_server.rs  transfer_manager.rs
src/openwit-janitor/: Cargo.toml
src/openwit-janitor/src/: actor.rs  compaction.rs  leader_integration.rs  lib.rs  retention.rs  wal_cleanup.rs
src/openwit-kafka/: Cargo.toml
src/openwit-kafka/src/: batch_tracker.rs  client_batch_manager.rs  client_extractor.rs  grpc_client.rs  high_performance_consumer.rs  kafka_consumer.rs  kafka_consumer_safe.rs  kafka_server.rs  lib.rs  main.rs  safe_commit_consumer.rs  safe_kafka_consumer.rs  types.rs  wal_writer.rs
src/openwit-metastore/: Cargo.toml
src/openwit-metastore/src/: config.rs  lib.rs  postgres_metastore.rs  sled_metastore.rs
src/openwit-metrics/: Cargo.toml
src/openwit-metrics/src/: counters.rs  exporter.rs  health.rs  ingestion_metrics.rs  lib.rs
src/openwit-network/: Cargo.toml
src/openwit-network/examples/: leader_aware_nodes.rs
src/openwit-network/src/: discovery.rs  k8s_discovery.rs  leader_awareness.rs  lib.rs
src/openwit-perf-test/: Cargo.toml
src/openwit-perf-test/src/: high_performance_config.rs  lib.rs  load_generator.rs  metrics_collector.rs  performance_monitor.rs  report_generator.rs
src/openwit-postgres/: Cargo.toml
src/openwit-postgres/src/: batch_tracker.rs  lib.rs
src/openwit-proto/: Cargo.toml  build.rs
src/openwit-proto/protos/control/: control_plane.proto
src/openwit-proto/src/: lib.rs
src/openwit-proxy/: Cargo.toml  build.rs
src/openwit-proxy/proto/: ingest.proto
src/openwit-proxy/src/: arrow_utils.rs  control_integration.rs  control_plane_client.rs  distributed_router.rs  health_aware_router.rs  kafka_consumer.rs  lib.rs  passthrough_grpc_handler.rs  passthrough_http_handler.rs  passthrough_kafka_handler.rs  passthrough_proxy_server.rs  proxy_buffer.rs  round_robin.rs
src/openwit-search/: Cargo.toml  simple_perf_test.rs
src/openwit-search/src/: azure_query.rs  batch_monitoring_api.rs  lib.rs  query_engine.rs  search_main.rs  storage_grpc_client.rs  types.rs
src/openwit-server/: Cargo.toml
src/openwit-server/src/: backpressure.rs  datafusion_search_service.rs  enhanced_sql_rewriter.rs  format_helpers.rs  forward_ingest.rs  indexing_connector.rs  integrated_search_service.rs  lib.rs  search_service.rs  sql_rewriter.rs
src/openwit-source-gateway/: Cargo.toml
src/openwit-source-gateway/src/: errors.rs  gateway.rs  lib.rs
src/openwit-storage/: Cargo.toml
src/openwit-storage/src/: arrow_flight_receiver.rs  cloud_upload.rs  config.rs  json_to_kv_converter.rs  lib.rs  main.rs  metadata_cache.rs  otlp_ingestion.rs  parquet_file_manager.rs  query_cache.rs  schema_evolution.rs  simple_grpc_service.rs  simple_query_executor.rs  storage_processor.rs
src/openwit-transformations/: Cargo.toml
src/openwit-transformations/src/: api.rs  error.rs  lib.rs  logical_plan.rs  parser.rs  planner.rs  tantivy_converter.rs  transformations_main.rs
src/openwit_ingestion/: Cargo.toml
src/openwit_ingestion/src/: batch_preserving_receiver.rs  batched_otlp_receiver.rs  direct_otlp_to_arrow.rs  high_performance_receiver.rs  ingestion_receiver.rs  ingestion_receiver_batched.rs  ingestion_receiver_with_direct.rs  lib.rs  optimized_ingestion_receiver.rs  otlp_preserving_receiver.rs  types.rs
(+16 files in other folders)
