[package]
name = "openwit-actors"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chitchat = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
# rdkafka = {workspace=true} # Only openwit-proxy should consume from Kafka
opentelemetry-proto = { workspace = true }
hex = { workspace = true }
tokio-stream = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
opendal = { workspace = true }





openwit-proto = { workspace = true }
openwit-metrics = { workspace = true }
openwit-network = { workspace = true }
openwit-common = { workspace = true }
openwit-config = { workspace = true }
openwit_ingestion = { workspace = true }
openwit-storage = { workspace = true }
openwit-metastore = { workspace = true }
openwit-indexer = { workspace = true }
openwit-janitor = { workspace = true }
openwit-control-plane = { workspace = true }
bincode = { workspace = true }

