[package]
name = "openwit-common"
version.workspace = true
edition.workspace = true

[dependencies]
sysinfo = { workspace = true }
tokio = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
console-subscriber = { workspace = true }

openwit-proto = { workspace = true }
openwit-metrics = { workspace = true }
openwit-config = { workspace = true }