[package]
name = "openwit-config"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
