[package]
name = "openwit-http"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openwit-http"
path = "src/bin/openwit-http.rs"

[dependencies]
# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-proto = { workspace = true }

# Internal dependencies
openwit_ingestion = { workspace = true }
openwit-config = { workspace = true }
openwit-common = { workspace = true }
openwit-proto = { workspace = true }
openwit-metrics = { workspace = true }
openwit-control-plane = { workspace = true }

# Metrics
prometheus = { workspace = true }
lazy_static = { workspace = true }

# Other
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde_yaml = { workspace = true }
tonic = { workspace = true }
prost-types = { workspace = true }
prost = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }