[package]
name = "openwit-metrics"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
prometheus = { workspace = true }
once_cell = { workspace = true }
sysinfo = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

openwit-config = { workspace = true }
