[package]
name = "openwit-proxy"
version.workspace = true
edition.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# gRPC and HTTP
tonic = { workspace = true }
prost = { workspace = true }
hyper = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
prost-types = "0.13"

# Kafka
rdkafka = { workspace = true }

# Arrow (still needed for conversion utilities)
arrow = { workspace = true }

# Logging and errors
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
rand = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }

# Internal dependencies
openwit-proto = { workspace = true }
openwit-network = { workspace = true }
openwit-config = { workspace = true }
openwit-control-plane = { workspace = true }
openwit-inter-node = { workspace = true }
openwit-metrics = { workspace = true }
openwit_ingestion = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }