[package]
name = "openwit-transformations"
version.workspace = true
edition.workspace = true

# [[bin]]
# name = "openwit-transformations"
# path = "src/main.rs"

[dependencies]
# SQL parsing
sqlparser = { workspace = true }

# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }

# Web framework for API
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Internal dependencies
openwit-common = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio-test = { workspace = true }